--- a/IMusic/Search/SearchViewController.storyboard
+++ b/IMusic/Search/SearchViewController.storyboard
@@ -1,7 +1,45 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Wvk-4Y-x6S">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Search View Controller-->
+        <scene sceneID="9EA-y2-q7X">
+            <objects>
+                <viewController id="Wvk-4Y-x6S" customClass="SearchViewController" customModule="IMusic" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UxU-mr-0gq">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7eJ-Qy-RI5">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Wvk-4Y-x6S" id="Yyw-O4-DIn"/>
+                                    <outlet property="delegate" destination="Wvk-4Y-x6S" id="f8n-9C-cJY"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="7eJ-Qy-RI5" firstAttribute="leading" secondItem="lMt-vR-sGm" secondAttribute="leading" id="4a1-DP-iNG"/>
+                            <constraint firstItem="lMt-vR-sGm" firstAttribute="bottom" secondItem="7eJ-Qy-RI5" secondAttribute="bottom" id="OhD-xI-TAZ"/>
+                            <constraint firstItem="lMt-vR-sGm" firstAttribute="trailing" secondItem="7eJ-Qy-RI5" secondAttribute="trailing" id="UZh-r9-oHs"/>
+                            <constraint firstItem="7eJ-Qy-RI5" firstAttribute="top" secondItem="lMt-vR-sGm" secondAttribute="top" id="gN7-vA-Nx0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="lMt-vR-sGm"/>
+                    </view>
+                    <connections>
+                        <outlet property="table" destination="7eJ-Qy-RI5" id="wT8-7d-KrE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YlB-yS-8zU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-183" y="149"/>
+        </scene>
+    </scenes>
 </document>
