--- a/IMusic/Search/TrackDetailView/TrackDetailView.xib
+++ b/IMusic/Search/TrackDetailView/TrackDetailView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_5" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -11,12 +11,73 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" ambiguous="YES" id="sVd-HF-PrP" customClass="TrackDetailView" customModule="IMusic" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+        <view contentMode="scaleToFill" id="sVd-HF-PrP" customClass="TrackDetailView" customModule="IMusic" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rdg-VC-4u3">
+                    <rect key="frame" x="0.0" y="44" width="414" height="64"/>
+                    <subviews>
+                        <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uc6-St-VSn">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="1"/>
+                            <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="fiG-Ro-Z6h"/>
+                            </constraints>
+                        </view>
+                        <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="csP-hp-woC">
+                            <rect key="frame" x="8" y="8" width="398" height="48"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ajl-Qo-HtT">
+                                    <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
+                                    <color key="backgroundColor" red="0.94689267870000005" green="0.36828744410000003" blue="0.42734280229999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="48" id="OmY-HS-MtR"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S93-dW-cZW">
+                                    <rect key="frame" x="64" y="0.0" width="206" height="48"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m3B-V1-Mdi">
+                                    <rect key="frame" x="286" y="0.0" width="48" height="48"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="48" id="wut-s1-34P"/>
+                                    </constraints>
+                                    <state key="normal" image="Pause"/>
+                                    <connections>
+                                        <action selector="playPauseAction:" destination="sVd-HF-PrP" eventType="touchUpInside" id="Ujg-x0-c3N"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HCV-w6-b0g">
+                                    <rect key="frame" x="350" y="0.0" width="48" height="48"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="48" id="ZLU-41-QJG"/>
+                                    </constraints>
+                                    <state key="normal" image="Fast forward"/>
+                                    <connections>
+                                        <action selector="nextTrack:" destination="sVd-HF-PrP" eventType="touchUpInside" id="1Xv-2G-c1n"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="uc6-St-VSn" firstAttribute="leading" secondItem="rdg-VC-4u3" secondAttribute="leading" id="2vI-cC-WZh"/>
+                        <constraint firstItem="csP-hp-woC" firstAttribute="top" secondItem="rdg-VC-4u3" secondAttribute="top" constant="8" id="GBW-lC-1lj"/>
+                        <constraint firstItem="uc6-St-VSn" firstAttribute="top" secondItem="rdg-VC-4u3" secondAttribute="top" id="LZV-lg-PMH"/>
+                        <constraint firstAttribute="trailing" secondItem="csP-hp-woC" secondAttribute="trailing" constant="8" id="N0q-Wb-1Ub"/>
+                        <constraint firstAttribute="trailing" secondItem="uc6-St-VSn" secondAttribute="trailing" id="OgZ-CD-iF6"/>
+                        <constraint firstItem="csP-hp-woC" firstAttribute="leading" secondItem="rdg-VC-4u3" secondAttribute="leading" constant="8" id="V0n-dn-Cfz"/>
+                        <constraint firstAttribute="height" constant="64" id="h0d-ht-nve"/>
+                        <constraint firstAttribute="bottom" secondItem="csP-hp-woC" secondAttribute="bottom" constant="8" id="ykj-Dw-tZa"/>
+                    </constraints>
+                </view>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ijo-Q1-KhJ">
-                    <rect key="frame" x="30" y="0.0" width="358" height="706"/>
+                    <rect key="frame" x="30" y="44" width="358" height="788"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="85s-BL-G7h">
                             <rect key="frame" x="0.0" y="0.0" width="358" height="44"/>
@@ -77,28 +138,24 @@
                                     <rect key="frame" x="0.0" y="28.666666666666742" width="358" height="28.666666666666671"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                    <color key="textColor" red="0.90980392156862744" green="0.27058823529411763" blue="0.3529411764705882" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="textColor" red="0.94689267870000005" green="0.36828744410000003" blue="0.42734280229999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="e7z-cn-GMh">
-                            <rect key="frame" x="0.0" y="547.33333333333337" width="358" height="131.66666666666663"/>
+                            <rect key="frame" x="0.0" y="547.33333333333337" width="358" height="213.66666666666663"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C94-bx-5br">
-                                    <rect key="frame" x="0.0" y="56" width="119.33333333333333" height="20"/>
+                                    <rect key="frame" x="0.0" y="97" width="119.33333333333333" height="20"/>
                                     <color key="tintColor" systemColor="labelColor"/>
                                     <state key="normal" image="Left"/>
                                     <connections>
                                         <action selector="reviousTrack:" destination="sVd-HF-PrP" eventType="touchUpInside" id="A4C-e6-cKp"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VAG-mB-Do8">
-                                    <rect key="frame" x="119.33333333333334" y="6.3333333333332504" width="119.33333333333334" height="119.33333333333331"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" secondItem="VAG-mB-Do8" secondAttribute="height" id="GNH-kg-WdX"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VAG-mB-Do8">
+                                    <rect key="frame" x="119.33333333333334" y="89" width="119.33333333333334" height="36"/>
                                     <color key="tintColor" systemColor="labelColor"/>
                                     <state key="normal">
                                         <imageReference key="image" image="Pause" renderingMode="original"/>
@@ -108,7 +165,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Re-Ws-fwX">
-                                    <rect key="frame" x="238.66666666666671" y="56" width="119.33333333333334" height="20"/>
+                                    <rect key="frame" x="238.66666666666671" y="97" width="119.33333333333334" height="20"/>
                                     <color key="tintColor" systemColor="labelColor"/>
                                     <state key="normal" image="Fast forward">
                                         <color key="titleColor" systemColor="labelColor"/>
@@ -120,7 +177,7 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="GY2-al-dYI">
-                            <rect key="frame" x="0.0" y="689" width="358" height="17"/>
+                            <rect key="frame" x="0.0" y="771" width="358" height="17"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon Min" translatesAutoresizingMaskIntoConstraints="NO" id="N0B-3k-zfo">
                                     <rect key="frame" x="0.0" y="0.0" width="17" height="17"/>
@@ -154,16 +211,25 @@
                 <constraint firstItem="ijo-Q1-KhJ" firstAttribute="leading" secondItem="HpW-DP-oKd" secondAttribute="leading" constant="30" id="IS8-fE-SQS"/>
                 <constraint firstItem="HpW-DP-oKd" firstAttribute="bottom" secondItem="ijo-Q1-KhJ" secondAttribute="bottom" constant="30" id="KvL-a9-qLK"/>
                 <constraint firstItem="ijo-Q1-KhJ" firstAttribute="top" secondItem="HpW-DP-oKd" secondAttribute="top" id="N4o-x0-9py"/>
+                <constraint firstItem="HpW-DP-oKd" firstAttribute="top" secondItem="rdg-VC-4u3" secondAttribute="top" id="Y5M-tY-t4n"/>
+                <constraint firstItem="rdg-VC-4u3" firstAttribute="trailing" secondItem="HpW-DP-oKd" secondAttribute="trailing" id="inf-ug-YVX"/>
+                <constraint firstItem="rdg-VC-4u3" firstAttribute="leading" secondItem="HpW-DP-oKd" secondAttribute="leading" id="nec-Oj-cuX"/>
             </constraints>
             <connections>
                 <outlet property="authorTitle" destination="zqH-mZ-XHb" id="TYS-Fg-WeT"/>
                 <outlet property="currentSlider" destination="JIJ-Op-UHi" id="Oz9-6o-UtZ"/>
                 <outlet property="currentTimeLabel" destination="MkU-wJ-wgW" id="7qP-iJ-VQf"/>
                 <outlet property="durationLabel" destination="TFo-PB-nlt" id="eIE-uY-9Pa"/>
+                <outlet property="maximazedTrackView" destination="ijo-Q1-KhJ" id="MDU-0T-dzC"/>
+                <outlet property="mimTrackView" destination="rdg-VC-4u3" id="Toh-OJ-cjn"/>
+                <outlet property="miniGoforwardButton" destination="rdg-VC-4u3" id="vd7-CK-1Ci"/>
+                <outlet property="miniPlayPauseButton" destination="m3B-V1-Mdi" id="j1Q-hp-KK3"/>
+                <outlet property="miniTrackImageView" destination="Ajl-Qo-HtT" id="LpN-eC-DSl"/>
+                <outlet property="miniTrackTitleLabel" destination="S93-dW-cZW" id="rf6-sl-xd4"/>
                 <outlet property="playPauseButton" destination="VAG-mB-Do8" id="Jxx-tx-lGO"/>
                 <outlet property="trackImageView" destination="2GG-QO-I7f" id="yqD-iE-lKv"/>
                 <outlet property="trackTitle" destination="CES-Ox-zY8" id="m4t-wM-92v"/>
-                <outlet property="volumeSlider" destination="3Re-Ws-fwX" id="mh7-EZ-4dm"/>
+                <outlet property="volumeSlider" destination="VI5-Ja-wdH" id="c9U-sH-oqZ"/>
             </connections>
             <point key="canvasLocation" x="52" y="126"/>
         </view>
@@ -177,6 +243,12 @@
         <image name="Pause" width="28" height="36"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
